Change api and dto's to better suit the needs of frontend
