# src/main/java/cz/cvut/fit/tomanma9/tjvhospital/api/controller/AppointmentController.java
@@ -1,6 +1,8 @@
 package cz.cvut.fit.tomanma9.tjvhospital.api.controller;
 
 import cz.cvut.fit.tomanma9.tjvhospital.api.model.AppointmentDto;
+import cz.cvut.fit.tomanma9.tjvhospital.api.model.InnerDoctorDto;
+import cz.cvut.fit.tomanma9.tjvhospital.api.model.InnerPatientDto;
 import cz.cvut.fit.tomanma9.tjvhospital.business.AppointmentService;
 import cz.cvut.fit.tomanma9.tjvhospital.business.DoctorService;
 import cz.cvut.fit.tomanma9.tjvhospital.business.PatientService;
@@ -18,8 +20,16 @@ public class AppointmentController extends AbstractCrudController<Appointment, A
                     AppointmentDto dto = new AppointmentDto();
 
                     dto.setId(appointment.getId());
-                    dto.setPatient(appointment.getPatient().getId());
-                    dto.setDoctor(appointment.getDoctor().getId());
+
+                    InnerDoctorDto innerDoctorDto = new InnerDoctorDto();
+                    innerDoctorDto.doctor_id = appointment.getDoctor().getId();
+                    innerDoctorDto.doctor_name = appointment.getDoctor().getName();
+                    dto.setDoctor(innerDoctorDto);
+
+                    InnerPatientDto innerPatientDto = new InnerPatientDto();
+                    innerPatientDto.patient_id = appointment.getPatient().getId();
+                    innerPatientDto.patient_name = appointment.getPatient().getName();
+                    dto.setPatient(innerPatientDto);
                     dto.setFrom(appointment.getFrom());
                     dto.setTo(appointment.getTo());
 
@@ -28,8 +38,8 @@ public class AppointmentController extends AbstractCrudController<Appointment, A
                 dto -> {
                     // nullpointers are OK
                     return new Appointment(dto.getId(),
-                            patientService.readById(dto.getPatient()).get(),
-                            doctorService.readById(dto.getDoctor()).get(),
+                            patientService.readById(dto.getPatient().getPatient_id()).get(),
+                            doctorService.readById(dto.getDoctor().getDoctor_id()).get(),
                             dto.getFrom(),
                             dto.getTo());
                 });
