# src/main/java/cz/cvut/fit/tomanma9/tjvhospital/api/model/InnerPatientDto.java
@@ -1,0 +1,22 @@
+package cz.cvut.fit.tomanma9.tjvhospital.api.model;
+
+public class InnerPatientDto {
+    public Long patient_id;
+    public String patient_name;
+
+    public Long getPatient_id() {
+        return patient_id;
+    }
+
+    public void setPatient_id(Long patient_id) {
+        this.patient_id = patient_id;
+    }
+
+    public String getPatient_name() {
+        return patient_name;
+    }
+
+    public void setPatient_name(String patient_name) {
+        this.patient_name = patient_name;
+    }
+}
