# src/main/java/cz/cvut/fit/tomanma9/tjvhospital/api/model/converter/DoctorToDtoConverter.java
@@ -2,6 +2,8 @@ package cz.cvut.fit.tomanma9.tjvhospital.api.model.converter;
 
 
 import cz.cvut.fit.tomanma9.tjvhospital.api.model.DoctorDto;
+import cz.cvut.fit.tomanma9.tjvhospital.api.model.InnerAppointmentForDoctorDto;
+import cz.cvut.fit.tomanma9.tjvhospital.api.model.InnerPatientDto;
 import cz.cvut.fit.tomanma9.tjvhospital.domain.Appointment;
 import cz.cvut.fit.tomanma9.tjvhospital.domain.Doctor;
 import cz.cvut.fit.tomanma9.tjvhospital.domain.Patient;
@@ -23,11 +25,23 @@ public class DoctorToDtoConverter implements Function<Doctor, DoctorDto> {
         dto.setPhoneNumber(doctor.getPhoneNumber());
 
         dto.setAppointments(doctor.getAppointments().stream()
-                .map(Appointment::getId) // thank you idea for this method-reference-thingy!
+                .map((Appointment appointment) -> {
+                    InnerAppointmentForDoctorDto innerAppointment = new InnerAppointmentForDoctorDto();
+                    innerAppointment.setAppointment_id(appointment.getId());
+                    innerAppointment.setPatient_id(appointment.getPatient().getId());
+                    innerAppointment.setPatient_name(appointment.getPatient().getName());
+                    innerAppointment.setTime_from(appointment.getFrom());
+                    return innerAppointment;
+                })
                 .toList());
 
         dto.setPatients(doctor.getPatients().stream()
-                .map(Patient::getId)
+                .map((Patient patient) -> {
+                    InnerPatientDto innerPatientDto = new InnerPatientDto();
+                    innerPatientDto.setPatient_id(patient.getId());
+                    innerPatientDto.setPatient_name(patient.getName());
+                    return innerPatientDto;
+                })
                 .toList());
         return dto;
 
